--- a/ASS2/css/styles.css
+++ b/ASS2/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .page {
-  width: 850px;
+  width: 100vw; /* Set the page width to 100% of the viewport width */
   background-color: white;
   margin: auto;
   padding: 50px;
