--- a/ASS2/css/styles.css
+++ b/ASS2/css/styles.css
@@ -18,6 +18,8 @@ body {
   padding: 50px;
   padding-top: 35px;
   padding-bottom: 50px; /* Increase padding to add space at the bottom */
+  padding-left: 20px; /* Increase left padding */
+  padding-right: 20px; /* Increase right padding */
 }
 
 .vis-container {
